--- a/MyBank-Draft3/Pages/Admin/StaffList.xaml
+++ b/MyBank-Draft3/Pages/Admin/StaffList.xaml
@@ -102,7 +102,7 @@
             <!-- Right Panel Section -->
             <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,10,10">
                 <!-- Total Admins Card -->
-                <materialDesign:Card Background="#131a22" UniformCornerRadius="8" Width="370" Height="80" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,0,0,15">
+                <materialDesign:Card Background="#131a22" UniformCornerRadius="8" Width="370" Height="80" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,60,0,15">
                     <WrapPanel Orientation="Horizontal">
                         <Border Height="80" Width="90" HorizontalAlignment="Left" Background="#171f27" CornerRadius="8 0 0 8">
                             <materialDesign:PackIcon x:Name="AdminsIcon" Kind="ShieldAccount" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#E24A4A" Width="50" Height="50"/>
@@ -115,7 +115,7 @@
                 </materialDesign:Card>
 
                 <!-- Admin Details Card -->
-                <materialDesign:Card Background="#131a22" UniformCornerRadius="8" Width="370" Height="525" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <materialDesign:Card Background="#131a22" UniformCornerRadius="8" Width="370" Height="464.5" HorizontalAlignment="Left" VerticalAlignment="Top">
                     <StackPanel x:Name="adminDetailsPanel" Margin="15,15,15,0">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Admin Details" Foreground="White" FontSize="18" FontWeight="Medium" FontFamily="Inter" Margin="0,0,0,5" TextDecorations="Underline"/>
@@ -130,14 +130,6 @@
                                 </WrapPanel>
                             </Button>
                         </StackPanel>
-
-                        <TextBlock Text="User ID" Foreground="White" FontSize="14" FontWeight="Medium" FontFamily="Inter" Margin="0,8,0,5"/>
-                        <Border CornerRadius="3" BorderThickness="0.5" Background="White" BorderBrush="Black" Height="30">
-                            <TextBox x:Name="userIdTB" materialDesign:HintAssist.Background="Transparent" materialDesign:HintAssist.Hint="User ID"
-                                materialDesign:HintAssist.Foreground="Black" 
-                                materialDesign:TextFieldAssist.DecorationVisibility="Hidden" CaretBrush="Green"
-                                Foreground="Black" VerticalContentAlignment="Center" Width="340" Height="30"/>
-                        </Border>
 
                         <TextBlock Text="First Name" Foreground="White" FontSize="14" FontWeight="Medium" FontFamily="Inter" Margin="0,8,0,5"/>
                         <Border CornerRadius="3" BorderThickness="0.5" Background="White" BorderBrush="Black" Height="30">
@@ -172,14 +164,14 @@
                         </Border>
 
                         <StackPanel Margin="0,50,0,0" Orientation="Horizontal" HorizontalAlignment="Center">
-                            <Button x:Name="updateAdminBTN" materialDesign:ButtonAssist.CornerRadius="6" materialDesign:ElevationAssist.Elevation="Dp0" Width="90" Height="32" Background="#4A90E2" BorderBrush="#4A90E2" Margin="0,0,15,0" IsEnabled="False" Click="updateAdminBTN_Click">
+                            <Button x:Name="updateAdminBTN" materialDesign:ButtonAssist.CornerRadius="6" materialDesign:ElevationAssist.Elevation="Dp0" Width="90" Height="32" Background="#4A90E2" BorderBrush="#4A90E2" Margin="0,0,15,0" IsEnabled="True" Click="updateAdminBTN_Click">
                                 <WrapPanel Orientation="Horizontal">
                                     <materialDesign:PackIcon Kind="AccountEdit" VerticalAlignment="Center" Margin="0,0,4,0" Foreground="White" Width="14" Height="14">
                                         <materialDesign:PackIcon.Effect>
                                             <DropShadowEffect ShadowDepth="0" Direction="0" Color="White" Opacity="0.6" BlurRadius="3"/>
                                         </materialDesign:PackIcon.Effect>
                                     </materialDesign:PackIcon>
-                                    <TextBlock Foreground="White" FontSize="12">Update</TextBlock>
+                                    <TextBlock Foreground="White" FontSize="12">Add</TextBlock>
                                 </WrapPanel>
                             </Button>
 
